--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,7 @@
                   <ul class="dropdown-menu">
                     <li><%= link_to icon_tag(' Ver Perfil', :class => 'icon-user'),  usuario_path(current_usuario.id) %></li>
                     <li><%= link_to icon_tag(' Cambiar Clave', :class => 'icon-edit'),  cambiar_clave_path %></li>
-                    <li><%= link_to icon_tag(' Salir', :class => 'icon-share'), logout_path %></li>
+                    <li><%# link_to icon_tag(' Salir', :class => 'icon-share'), logout_path %></li>
                   </ul>
                 </li>
               </ul>
