--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -9,6 +9,13 @@
   <br />
 
   <% if @expedientes.present? %>
+  
+<ul class="nav nav-tabs">
+  <li class="tab active"><%= link_to 'Expediente en Proceso', '#', :class => 'pf' %></a></li>
+  <li class="tab"><%= link_to 'Expediente a Recibir', '#', :class => 'pji'  %></li>
+  <li class="tab"><%= link_to 'Expedientes Nuevos', '#', :class => 'pje' %></li>
+</ul>
+
     <table class="table table-striped table-bordered table-condensed">
       <tr>
         <th>N&uacute;mero</th>
@@ -22,9 +29,9 @@
           <td><%= expediente.numero %></td>          
           <td>
             <span class="label label-info"><%= expediente.estado %></span>
-            <%= link_to expediente.procedimiento.nombre, expediente %>
+            <%# link_to expediente.procedimiento.nombre, expediente %>
           </td>
-          <td><%= expediente.ente.nombre_completo %></td>
+          <td><%= expediente.ente_id %></td>
           <td><%= truncate(expediente.descripcion, :length => 80) %></td>
           
           <td>
@@ -41,6 +48,7 @@
         </tr>
       <% end %>
     </table> 
+
   <% else %>
     <p class="alert-message warning">
       Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
