--- a/app/views/tiempos_demorados/_reporte_601.html.erb
+++ b/app/views/tiempos_demorados/_reporte_601.html.erb
@@ -1,9 +1,96 @@
   <div class="page-header">
     <h1>Expedientes Pendientes<small> por procedimientos</small></h1>
   </div>
-    <p><%= link_to 'volver', tiempos_demorados_path %></p>
+  <%= link_to 'volver', tiempos_demorados_path %></p>,
 
 <% if @tiempos_demorados.present? %>
+
+
+<!--
+
+                    'Monday',
+                    'Tuesday',
+                    'Wednesday',
+                    'Thursday',
+                    'Friday',
+                    'Saturday',
+                    'Sunday'
+                  -->
+<script type="text/javascript">
+/*
+$(function () {
+        $('#container').highcharts({
+            chart: {
+                type: 'areaspline'
+            },
+            title: {
+                text: 'Expedientes Demorados'
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'left',
+                verticalAlign: 'top',
+                x: 150,
+                y: 100,
+                floating: true,
+                borderWidth: 1,
+                backgroundColor: '#FFFFFF'
+            },
+            xAxis: {
+                categories: [
+
+              <% @tiempos_demorados.each do |tiempo_demorado| %>
+              '<%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %>',
+              <% end %>
+
+                ],
+                plotBands: [{ // visualize the weekend
+                    from: 4.5,
+                    to: 6.5,
+                    color: 'rgba(68, 170, 213, .2)'
+                }]
+            },
+            yAxis: {
+                title: {
+                    text: 'Tiempos Transcurrido'
+                }
+            },
+            tooltip: {
+                shared: true,
+                valueSuffix: ' units'
+            },
+            credits: {
+                enabled: false
+            },
+            plotOptions: {
+                areaspline: {
+                    fillOpacity: 0.5
+                }
+            },
+            series: [
+            <%
+            v_usuario = ""
+            @tiempos_demorados.each do |tiempo_demorado|
+            tiempo_demorado.cfuncionario
+            %>
+            {
+              <% @tiempos_demorados.each do |tiempo_demorado| %>
+              '<%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %>',
+                name: 'John',
+                data: [3, 4, 3, 5, 4, 10, 12]
+            },
+            {
+                name: 'Jane',
+                data: [1, 3, 4, 3, 3, 5, 4]
+            }
+            <% end %>
+            ]
+        });
+    });
+  */
+</script>
+<div id="container"></div>
+
     <table class="table table-striped table-bordered table-condensed">
       <tr>
         <th>Expediente</th>
@@ -34,4 +121,4 @@
     <p class="alert-message warning">
       No hay datos, <%= link_to 'volver', tiempos_demorados_path %>.
     </p>
-  <% end %> 
+  <% end %>
