--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -9,27 +9,29 @@
   <br />
 
   <% if @expedientes.present? %>
+  
+<ul class="nav nav-tabs">
+  <li class="tab active"><%= link_to 'Expediente en Proceso', '#', :class => 'pf' %></a></li>
+  <li class="tab"><%= link_to 'Expediente a Recibir', '#', :class => 'pji'  %></li>
+  <li class="tab"><%= link_to 'Expedientes Nuevos', '#', :class => 'pje' %></li>
+</ul>
+
     <table class="table table-striped table-bordered table-condensed">
       <tr>
-        <th>Numero</th>
+        <th>N&uacute;mero</th>
         <th>Procedimiento</th>
-        <th>Ente</th>
-        <th>Usuario</th>
-        <th>Descripcion</th>
-                
-
+        <th>Solicitante</th>
+        <th>Descripci&oacute;n</th>
         <th></th>
       </tr>
       <% @expedientes.each do |expediente| %>
         <tr>
-          <td><%= expediente.numero %></td>          
+          <td><%= link_to expediente.numero, expediente %></td>
           <td>
             <span class="label label-info"><%= expediente.estado %></span>
-            <%= link_to expediente.procedimiento.nombre, expediente %>
           </td>
-          <td><%= expediente.ente.nombre_completo %></td>
-          <td><%= expediente.usuario_ingreso.nombre_completo %></td>
-          <td><%= truncate(expediente.descripcion, :length => 80) %></td>          
+          <td><%= expediente.ente_id %></td>
+          <td><%= truncate(expediente.descripcion, :length => 80) %></td>
           
           <td>
 
@@ -45,6 +47,7 @@
         </tr>
       <% end %>
     </table> 
+
   <% else %>
     <p class="alert-message warning">
       Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
