--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -8,108 +8,115 @@
   </div>
   <br />
 
-  
-  
-    <ul class="nav nav-tabs" id="myTab">
-    <li class="active"><a href="#ccenproceso">En Proceso</a></li>
-    <li><a href="#ccnuevo">Nuevos</a></li>
-    <li><a href="#ccentransito">En transito</a></li>
-    </ul>
-     
-    <div class="tab-content">
+
+  <ul class="nav nav-tabs" id="myTab">
+    <li class="active"><a href="#ccenproceso">Mis Expedientes</a></li>
+    <li><a href="#ccnuevo">Bandeja de Entrada</a></li>
+    <li><a href="#ccentransito">Bandeja de Salida</a></li>
+  </ul>
+
+  <div class="tab-content">
     <div class="tab-pane active" id="ccenproceso">
-
-    <h2>Expedientes en Proceso</h2>
-    <% if @expedientes_procesos.present? %>
-    <table class="table table-striped table-bordered table-condensed">
-      <tr>
-        <th>N&uacute;mero</th>
-        <th>Procedimiento</th>
-        <th>Solicitante</th>
-        <th>Descripci&oacute;n</th>
-        <th></th>
-      </tr>
-      <% @expedientes_procesos.each do |expediente| %>
-        <tr>
-          <td><%= expediente.id %> <%= link_to expediente.numero, expediente %></td>
-          <td>
-            <span class="label label-info"><%= expediente.estado %></span>
-          </td>
-          <td><%= expediente.ente_id %></td>
-          <td><%= truncate(expediente.descripcion, :length => 80) %></td>
-          
-          <td>
-
-            <div class="btn-group">              
-              <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
-              <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_expediente_path(expediente) %></li>
-                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), expediente, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-
-              </ul>              
-            </div>
-          </td>
-        </tr>
+      <h2>Mis Expedientes</h2>
+      <% if @expedientes_procesos.present? %>
+        <table class="table table-striped table-bordered table-condensed">
+          <tr>
+            <th>N&uacute;mero</th>
+            <th>Procedimiento</th>
+            <th>Solicitante</th>
+            <th>Descripci&oacute;n</th>
+            <th></th>
+          </tr>
+          <% @expedientes_procesos.each do |expediente| %>
+            <tr>
+              <td><%= expediente.id %> <%= link_to expediente.numero, expediente %></td>
+              <td>
+                <span class="label label-info"><%= expediente.estado %></span>
+              </td>
+              <td><%= expediente.ente_id %></td>
+              <td><%= truncate(expediente.descripcion, :length => 80) %></td>
+              <td>
+                <div class="btn-group">
+                  <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+                  <ul id="menu1" class="dropdown-menu">
+                    <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_expediente_path(expediente) %></li>
+                    <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), expediente, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </table>
+      <% else %>
+        <p class="alert-message warning">
+          Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
+        </p>
       <% end %>
-    </table> 
-
-    <% else %>
-    <p class="alert-message warning">
-      Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
-    </p>
-    <% end %>
 
     </div>
 
     <div class="tab-pane" id="ccnuevo">
-      <h2>Expedientes Nuevos</h2>
+      <h2>Bandeja de Entrada</h2>
 
+      <% if @expedientes_entradas.present? %>
+        <table class="table table-striped table-bordered table-condensed">
+          <tr>
+            <th>N&uacute;mero</th>
+            <th>Procedimiento</th>
+            <th>Solicitante</th>
+            <th>Descripci&oacute;n</th>
+            <th></th>
+          </tr>
+          <% @expedientes_entradas.each do |expediente| %>
+            <tr>
+              <td> <%= expediente.id %> <%= link_to expediente.numero, expediente %></td>
+              <td>
+                <span class="label label-info"><%= expediente.estado %></span>
+              </td>
+              <td><%= expediente.ente_id %></td>
+              <td><%= truncate(expediente.descripcion, :length => 80) %></td>
+              <td>
+                <div class="btn-group">
+                  <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
+                  <ul id="menu1" class="dropdown-menu">
+                    <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_expediente_path(expediente) %></li>
+                    <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), expediente, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+          <% end %>
+        </table>
 
-    <% if @expedientes_nuevos.present? %>
-    <table class="table table-striped table-bordered table-condensed">
-      <tr>
-        <th>N&uacute;mero</th>
-        <th>Procedimiento</th>
-        <th>Solicitante</th>
-        <th>Descripci&oacute;n</th>
-        <th></th>
-      </tr>
-      <% @expedientes_nuevos.each do |expediente| %>
-        <tr>
-          <td> <%= expediente.id %> <%= link_to expediente.numero, expediente %></td>
-          <td>
-            <span class="label label-info"><%= expediente.estado %></span>
-          </td>
-          <td><%= expediente.ente_id %></td>
-          <td><%= truncate(expediente.descripcion, :length => 80) %></td>
-          
-          <td>
-
-            <div class="btn-group">              
-              <%= link_to 'Acciones <b class="caret"></b>'.html_safe, '#', :class => 'btn btn-primary dropdown-toggle', 'data-toggle' => 'dropdown' %>
-              <ul id="menu1" class="dropdown-menu">
-                <li><%= link_to icon_tag('Editar', :class => 'icon-pencil'), edit_expediente_path(expediente) %></li>
-                <li><%= link_to icon_tag('Eliminar', :class => 'icon-trash'), expediente, confirm: '¿Está seguro de eliminar este registro?. Esta acción no se puede deshacer', method: :delete %></li>
-
-              </ul>              
-            </div>
-          </td>
-        </tr>
+      <% else %>
+        <p class="alert-message warning">
+          Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
+        </p>
       <% end %>
-    </table> 
-
-    <% else %>
-    <p class="alert-message warning">
-      Todavía no hay expedientes, <%= link_to 'agregar', new_expediente_path %>.
-    </p>
-    <% end %>
-
-
     </div>
 
-
     <div class="tab-pane" id="ccentransito">
-      <h2>Expedientes en Transito</h2>
+      <h2>Bandeja de Salida</h2>
+      <table class='table table-condensed table-bordered'>
+        <thead>
+        <tr>
+          <th>Número</th>
+          <th>Procedimiento</th>
+          <th>Descripción</th>
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @expedientes_salidas.each do |expediente| %>
+          <tr>
+            <td><%= expediente.numero %></td>
+            <td><%= %></td>
+            <td><%= expediente.descripcion %></td>
+            <td></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
     </div>
     </div>
      
