Pequeños cambios para que funcionen algunas cosas

--- a/app/views/informes/index.html.erb
+++ b/app/views/informes/index.html.erb
@@ -6,7 +6,7 @@
   <br />
 
   <div>
-    <p><%= link_to "Demora de expedientes", form_demora_path %></p>
+    <p><%= link_to "Demora de expedientes", tiempos_demorados_path %></p>
     <p><%= link_to "Demanda de procesos", form_demanda_path %></p>
     <p><%= link_to "Radicacion de Expedientes", form_radicados_path %></p>
   </div>
