--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -48,34 +48,36 @@
               </tr>
             </table>
           </fieldset>
+          <% if @vista_tareas.present? %>
               <%= render 'logica_toolbar',
                 :tarea_siguiente => @tarea_siguiente,
                 :tarea_expediente_actual => @tarea_expediente_actual,
                 :expediente => @expediente,
                 :vista_tarea => @vista_tareas.first if @expediente.procesable? && @tarea_actual && @tarea_siguiente.es_logica? %>
 
-          <%= render 'traslado_toolbar',
+              <%= render 'traslado_toolbar',
+                         :tarea_siguiente => @tarea_siguiente,
+                         :tarea_expediente_actual => @tarea_expediente_actual,
+                         :expediente => @expediente,
+                         :vista_tarea => @vista_tareas.first if @expediente.procesable? && @tarea_actual && @expediente.tarea_expediente_actual.finalizado? && @tarea_siguiente.es_traslado? %>
+
+              <%= render 'archivado_toolbar',
+                         :tarea_siguiente => @tarea_siguiente,
+                         :tarea_expediente_actual => @tarea_expediente_actual,
+                         :expediente => @expediente,
+                         :vista_tarea => @vista_tareas.first if @expediente.procesable? && @tarea_actual && @tarea_siguiente.es_archivado? %>
+
+              <%= render 'logica_toolbar',
                      :tarea_siguiente => @tarea_siguiente,
                      :tarea_expediente_actual => @tarea_expediente_actual,
                      :expediente => @expediente,
-                     :vista_tarea => @vista_tareas.first if @expediente.procesable? && @tarea_actual && @tarea_siguiente.es_traslado? %>
-
-          <%= render 'archivado_toolbar',
-                     :tarea_siguiente => @tarea_siguiente,
-                     :tarea_expediente_actual => @tarea_expediente_actual,
-                     :expediente => @expediente,
-                     :vista_tarea => @vista_tareas.first if @expediente.procesable? && @tarea_actual && @tarea_siguiente.es_archivado? %>
-
-      <%= render 'logica_toolbar',
-                 :tarea_siguiente => @tarea_siguiente,
-                 :tarea_expediente_actual => @tarea_expediente_actual,
-                 :expediente => @expediente,
-                 :vista_tarea => @vista_tareas.first if @tarea_siguiente && @tarea_siguiente.es_logica? %>
+                     :vista_tarea => @vista_tareas.first if @tarea_siguiente && @tarea_siguiente.es_logica? %>
+            <% end %>
       </div>
 
     <div id="tareas">
       <%#= @vista_tareas.blank? %>
-      <%= render 'tareas', :vista_tareas => @vista_tareas unless (!@expediente.procesable? || @vista_tareas.blank?) || (@tarea_siguiente && @tarea_siguiente.es_logica? || @tarea_siguiente.es_archivado? || @tarea_siguiente.es_traslado?) %>
+      <%= render 'tareas', :vista_tareas => @vista_tareas unless (!@expediente.procesable? || @vista_tareas.blank?) || (@tarea_siguiente && @tarea_siguiente.es_logica? || @tarea_siguiente.es_archivado? || (@expediente.tarea_expediente_actual.finalizado? && @tarea_siguiente.es_traslado?)) %>
     </div>
 
     <div class="span11 well-simple">
