--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -7,8 +7,8 @@
     <div class="well-simple span11">
       <div class="btn-group">
         <%= link_to icon_tag('Recibir', :class => 'icon-edit icon-white'), recibir_expediente_path(@expediente), :class => 'btn btn-primary' if @expediente.a_recibir?(current_usuario) %>
-        <%= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
-        <%= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
+        <%#= link_to icon_tag('Editar', :class => 'icon-edit icon-white'), edit_expediente_path(@expediente), :class => 'btn btn-primary' %>
+        <%#= link_to icon_tag('Borrar', :class => 'icon-trash icon-white'), @expediente, confirm: 'Estás seguro?', method: :delete, class: 'btn btn-primary' %>
         <%= link_to icon_tag('Ver Todos', :class => 'icon-arrow-left icon-white'), expedientes_path, class: 'btn btn-primary' %>
         <%= mostrar_comprobante_entrada @expediente %>
       </div>
@@ -77,6 +77,7 @@
 
     <div id="tareas">
       <%#= @vista_tareas.blank? %>
+
       <%= render 'tareas', :vista_tareas => @vista_tareas unless (!@expediente.procesable? || @vista_tareas.blank?) || (@tarea_siguiente && @tarea_siguiente.es_logica? || @tarea_siguiente.es_archivado? || (@expediente.tarea_expediente_actual.finalizado? && @tarea_siguiente.es_traslado?)) %>
     </div>
 
