--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,11 +92,12 @@
               </ul>
               <ul class="nav pull-right">
                 <li class="dropdown">
-                  <%= link_to 'Contectado como ' + current_usuario.login, '#', :class => 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
+                  <%= link_to ('Contectado como ' + current_usuario.login + content_tag(:b, '', :class => 'caret')).html_safe,
+                      '#', :class => 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
                   <ul class="dropdown-menu">
                     <li><%= link_to icon_tag(' Ver Perfil', :class => 'icon-user'),  usuario_path(current_usuario.id) %></li>
                     <li><%= link_to icon_tag(' Cambiar Clave', :class => 'icon-edit'),  cambiar_clave_path %></li>
-                    <li><%# link_to icon_tag(' Salir', :class => 'icon-share'), logout_path %></li>
+                    <li><%= link_to icon_tag(' Salir', :class => 'icon-share'), logout_path %></li>
                   </ul>
                 </li>
               </ul>
