--- a/app/views/tiempos_demorados/_reporte_601.html.erb
+++ b/app/views/tiempos_demorados/_reporte_601.html.erb
@@ -6,89 +6,6 @@
 <% if @tiempos_demorados.present? %>
 
 
-<!--
-
-                    'Monday',
-                    'Tuesday',
-                    'Wednesday',
-                    'Thursday',
-                    'Friday',
-                    'Saturday',
-                    'Sunday'
-                  -->
-<script type="text/javascript">
-/*
-$(function () {
-        $('#container').highcharts({
-            chart: {
-                type: 'areaspline'
-            },
-            title: {
-                text: 'Expedientes Demorados'
-            },
-            legend: {
-                layout: 'vertical',
-                align: 'left',
-                verticalAlign: 'top',
-                x: 150,
-                y: 100,
-                floating: true,
-                borderWidth: 1,
-                backgroundColor: '#FFFFFF'
-            },
-            xAxis: {
-                categories: [
-
-              <% @tiempos_demorados.each do |tiempo_demorado| %>
-              '<%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %>',
-              <% end %>
-
-                ],
-                plotBands: [{ // visualize the weekend
-                    from: 4.5,
-                    to: 6.5,
-                    color: 'rgba(68, 170, 213, .2)'
-                }]
-            },
-            yAxis: {
-                title: {
-                    text: 'Tiempos Transcurrido'
-                }
-            },
-            tooltip: {
-                shared: true,
-                valueSuffix: ' units'
-            },
-            credits: {
-                enabled: false
-            },
-            plotOptions: {
-                areaspline: {
-                    fillOpacity: 0.5
-                }
-            },
-            series: [
-            <%
-            v_usuario = ""
-            @tiempos_demorados.each do |tiempo_demorado|
-            tiempo_demorado.cfuncionario
-            %>
-            {
-              <% @tiempos_demorados.each do |tiempo_demorado| %>
-              '<%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %>',
-                name: 'John',
-                data: [3, 4, 3, 5, 4, 10, 12]
-            },
-            {
-                name: 'Jane',
-                data: [1, 3, 4, 3, 3, 5, 4]
-            }
-            <% end %>
-            ]
-        });
-    });
-  */
-</script>
 <div id="container"></div>
 
     <table class="table table-striped table-bordered table-condensed">
@@ -106,9 +23,12 @@ $(function () {
         if(tiempo_demorado.cminutos.to_s.first=="+")
           s_color = "#FF0000"
         end
+        #expediente_iddoc = tiempo_demorado.cid +" - "+ tiempo_demorado.cnumero
+        #documento: => tiempo_demorado.cnumero}
+        #expediente_iddoc = "xx"  consulta(:id => tiempo_demorado.cid)
         %>
         <tr>
-          <td><%= tiempo_demorado.cnumero %> - <%= tiempo_demorado.cid %></td>
+          <td><%= link_to tiempo_demorado.cnumero, consulta_desplegar_expediente_path(:id => tiempo_demorado.cid, :documento => tiempo_demorado.cnumero) %> - <%= tiempo_demorado.cid %></td>
           <td><%= tiempo_demorado.cfecha_inicio %></td>
           <td><%= tiempo_letra tiempo_demorado.cminutos_demorados %></td>
           <td><%= tiempo_letra tiempo_demorado.cminutos_estimados %></td>
